<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_addHearing"
            android:title="@string/menu_addHearing" />
        <item
            android:id="@+id/nav_viewHearing"
            android:title="@string/menu_viewHearing" />
        <item
            android:id="@+id/nav_addAdvocate"
            android:title="@string/menu_addAdvocate" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
    <item android:title="App">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_logout"
                android:title="Logout" />

        </menu>
    </item>
    <item android:title="Developer">
        <menu>
            <item
                android:id="@+id/nav_developer"
                android:title="App Developers" />

        </menu>
    </item>

</menu>
